# moeviz

./: README.md  demo.py  hello.py  pyproject.toml
client/: index.html  package-lock.json  package.json
client/src/: config.js  histogram.js  main.js  style.css
moeviz/: __init__.py  config.py  model_adapters.py  server.py
static/: chart.js  index.html  package-lock.json
