[project]
name = "moeviz"
version = "0.1.0"
description = "visualize token routing in mixture-of-experts models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "python-socketio>=5.13.0",
    "torch>=2.6.0",
    "transformers>=4.49.0",
    "uvicorn>=0.34.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

